--- a/templates/create.html
+++ b/templates/create.html
@@ -14,7 +14,7 @@
     <li><label for="event_duration">Event Duration:</label> <input type="text" name="event_duration" /></li>
     <li><label for="event_capacity">Event Capacity:</label> <input type="text" name="event_capacity" /></li>
     <li><label for="event_venue">Event Venue:</label> <input type="text" name="event_venue" /></li>
-    <li><label for="event_address">Event Duration:</label> <input type="text" name="event_address" /></li>
+    <li><label for="event_address">Venue Address:</label> <input type="text" name="event_address" /></li>
     <li><label for="event_description">Event Description:</label> <input type="text" name="event_description" /></li>
 
     <br />Organizer Info:<br />
