--- a/templates/details.html
+++ b/templates/details.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Event Created, Thanks{% endblock %}
+{% block title %}Event Details{% endblock %}
 
 {% block content %}
-<p>Event Created, Thanks..</p>
-
+<p>Event Details.</p>
 {% if event %}
 <a href=/details/{{event.id}}>{{ event.name }}</a> <br />
 Event Id: {{ event.id }} <br />
@@ -15,6 +14,9 @@ Capacity: {{event.capacity}} <br />
 Venue: {{event.venue }} <br />
 Venue Address: {{event.venue_address}} <br />
 Organizer: {{event.organizer_id}}
+
+{% else %}
+<p>No valid event provided.</p>
 {% endif %}
 
 {% endblock %}
