--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-Language" content="en-us" />
 
     <link rel="stylesheet" href="/site_media/styles.css" />
+    <script type="text/javascript" src="/site_media/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="/site_media/notes.js"></script>
     <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
 
