Making some more updates.

--- a/templates/create.html
+++ b/templates/create.html
@@ -21,10 +21,7 @@
     
 
     <br />Organizer Info:<br />
-    <li><label for="person_fname">Organizer First Name:</label> <input type="text" name="person_fname" /></li>
-    <li><label for="person_lnames">Organizer Last Name:</label> <input type="text" name="person_lname" /></li>
-    <li><label for="person_email">Organizer Email:</label> <input type="text" name="person_email" /></li>
-    <li><label for="person_twitter">Organizer Twitter:</label> <input type="text" name="person_twitter" /></li>
+    <li><label for="person_email">Organizer Contact Email:</label> <input type="text" name="person_email" /></li>
   </ul>
   <br />
 <input type="submit" value="Create Event" />
