--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="Content-Language" content="en-us" />
 
-    <link rel="stylesheet" href="/site_media/styles.css" />
+    <link rel="stylesheet" href="/site_media/mike-styles.css" />
     <script type="text/javascript" src="/site_media/jquery-1.4.2.min.js"></script>
     <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
@@ -17,6 +17,7 @@
 <fb:profile-pic uid="loggedinuser" size="square" facebook-logo="true"></fb:profile-pic>
 <fb:name uid="loggedinuser" useyou="false" linked="true"></fb:name>
 <div id="profile_pics"></div>
+
 <script type="text/javascript">
 /*
 var widget_div = document.getElementById("profile_pics");
@@ -37,8 +38,6 @@ FB.ensureInit(function () {
   });
 });*/
 </script>
-
-
   <div id="body_wrapper">
     <div id="body_header">
       <h1>EventSpread</h1>
@@ -62,6 +61,8 @@ FB.ensureInit(function () {
 
 <div id="page_footer"> 
 Event Registration included! 
-</div> 
+</div>
+{% block jscript %}
+{% endblock %} 
 </body>
 </html>
