--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@ FB.ensureInit(function () {
             <li><a href="/list/">Browse</a></li>
             <li><a href="/create/">Create</a></li>
             <li><a href="/register/">Register</a></li>
-            <li><a href="/about/">About Us</a></li>
+            <li><a href="/user_details/">About Me</a></li>
         </ul>
         {% endblock %}
     </div>
