--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -55,7 +55,11 @@
       </div>
 {% endif%}
 
+
+
+
 <script>
+$(document).ready(function() {
 $("#not_going_button").click(function(){
 $.get('/ajax/event_not_going/{{event.id}}', function(data) {
 location.reload();
@@ -68,9 +72,29 @@ location.reload();
 });
 });
 
+$("#invite_button").click(function() {
+$.getJSON('/ajax/event_friend_not_attendees/{{event.id}}', function(data){
+	$.each(data.items, function(index, value) {
+		alert(value);
+
+
+	    });
+	});
+});
+
+});
 
 </script>
+
 {% endblock %}
+
+
+
+
+
+
+
+
 
 
 
