--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -18,9 +18,15 @@
 </head>
 
 <body>
-  <div id="invite_popup">
-    HELLO WORLD
-  </div>
+
+<div id="invite_popup" class="transbox"><span id="invite_popup_close">close</span><h2>Invite Your Friends!</h2><BR><BR>
+  <div class="twitterfriends">
+    <h3>Twitter Friends</h3>
+    <div id="twitlist"></div>
+  </div><BR><BR><BR><BR><BR><BR>
+<input type="submit" class="button" value="Invite my friends">
+</div>
+
 
   <div class="container">
 
