--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -66,7 +66,7 @@
 	     {% endif %}
 
 	     <font color=#9cb926>${{event.discount_price}}</font></div>
-	   <div class="genprice">General Ticket Price: <font color=#ff8a00>${{event.price}}</font></div>
+	   <div class="genprice">General Price: <font color=#ff8a00>${{event.price}}</font></div>
 	   <BR><BR><BR>
 		 <div class="attending">Attendees <font class="quiet">(<b>{{event.spots_left}}</b> Spots Left out of <b>{{event.capacity}}</b>!)</font></div>
 		    
