--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -1,9 +1,8 @@
 {% extends "event_base.html" %}
 
-
 {% block title%} {{event.name}}{% endblock %}
 
-{% block company %} EventSpread{% endblock%}
+{% block company %} <img height="200" src="http://raeez.mit.edu/yc/images/logo.png" />{% endblock%}
 
 {% block event_title %} {{event.name}}{% endblock%}
 
