--- a/templates/details.html
+++ b/templates/details.html
@@ -5,7 +5,7 @@
 {% block content %}
 <p>Event Details.</p>
 {% if event %}
-<a href=/details/{{event.id}}>{{ event.name }}</a> <br />
+<a href=/event_home/{{event.id}}>{{ event.name }}</a> <br />
 Event Id: {{ event.id }} <br />
 Description: {{event.description}} <br />
 Start Time: {{event.event_date_time_start}} <br />
