--- a/templates/list.html
+++ b/templates/list.html
@@ -9,7 +9,7 @@
     {% for event in events %}
     <hr />
         <li>
-	  <a href=/details/{{event.id}}>{{ event.name }}</a> <br />
+	  <a href=/event_home/{{event.id}}>{{ event.name }}</a> <br />
 	    Event Id: {{ event.id }} <br />
 	    Description: {{event.description}} <br />
 	    Start Time: {{event.event_date_time_start}} <br />
