Fixing event_home.html link to logo.

--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -2,7 +2,7 @@
 
 {% block title%} {{event.name}}{% endblock %}
 
-{% block company %} <img height="200" src="http://raeez.mit.edu/yc/images/logo.png" />{% endblock%}
+{% block company %} <img height="200" src="/site_media/images/logo.png" />{% endblock%}
 
 {% block event_title %} {{event.name}}{% endblock%}
 
