Fixing teh google map api to be a parameter from settings.

--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/site_media/blueprint/print.css" type="text/css" media="print">
     <link rel="stylesheet" href="/site_media/style.css" type="text/css">
     <link rel="stylesheet" href="/site_media/bubbles.css" type="text/css">
-    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAAa-ITbIufE7xEBivOguixpRTpH3CbXHjuCVmaTc5MkkU4wO1RRhSTzuNTVqoaPQ3vE-MKmsIwUxCuEQ"
+    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}"
             type="text/javascript"></script>
 
     <title>{% block title %}My amazing site{% endblock %}</title>
