Adding jquery plugins for time picker and overlays.

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
 
     <link rel="stylesheet" href="/site_media/mike-styles.css" />
     <script type="text/javascript" src="/site_media/jquery-1.4.2.min.js"></script>
+
+    <script type="text/javascript" src="/site_media/jquery.ptTimeSelect.js"></script>
+    <link rel="stylesheet" href="/site_media/jquery.ptTimeSelect.css" />
     <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
 
