--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="/site_media/mike-styles.css" />
     <script type="text/javascript" src="/site_media/jquery-1.4.2.min.js"></script>
 
-    <script type="text/javascript" src="/site_media/jquery.ptTimeSelect.js"></script>
     <link rel="stylesheet" href="/site_media/jquery.ptTimeSelect.css" />
+    <script type="text/javascript" src="/site_media/jquery.ptTimeSelect.js"></script>
+
+    <link rel="stylesheet" href="/site_media/jquery.calendar.css" type="text/css" media="screen" />
+    <script type="text/javascript" src="/site_media/jquery.calendar.js"></script>
+
+
     <title>{% block title %}My amazing site{% endblock %}</title>
 </head>
 
