--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="/site_media/blueprint/print.css" type="text/css" media="print">
     <link rel="stylesheet" href="/site_media/style.css" type="text/css">
     <link rel="stylesheet" href="/site_media/bubbles.css" type="text/css">
+
+    <script type="text/javascript" src="/site_media/jquery.tools.min.js"></script>
+
+
     <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}"
             type="text/javascript"></script>
 
@@ -19,7 +23,9 @@
 
 <body>
 
-<div id="invite_popup" class="transbox"><span id="invite_popup_close">close</span><h2>Invite Your Friends!</h2><BR><BR>
+<div id="invite_popup" class="simple_overlay">
+
+  <h2>Invite Your Friends!</h2><BR><BR>
   <div class="twitterfriends">
     <h3>Twitter Friends</h3>
     <div id="twitlist"></div>
