--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+	  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
+  <head>
     <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="Content-Language" content="en-us" />
 
-    <script type="text/javascript" src="/site_media/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="/site_media/myjscript.js"></script>
-    <link rel="stylesheet" href="/site_media/blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="/site_media/blueprint/print.css" type="text/css" media="print">
-    <link rel="stylesheet" href="/site_media/style.css" type="text/css">
-    <link rel="stylesheet" href="/site_media/bubbles.css" type="text/css">
+    <script type="text/javascript" src="/site_media/jquery-1.4.2.min.js" ></script>
+    <script type="text/javascript" src="/site_media/myjscript.js" ></script>
+    <script type="text/javascript" src="/site_media/jquery.tools.min.js" ></script>
 
-    <script type="text/javascript" src="/site_media/jquery.tools.min.js"></script>
+    <link rel="stylesheet" href="/site_media/blueprint/screen.css" type="text/css" media="screen, projection" >
+    <link rel="stylesheet" href="/site_media/blueprint/print.css" type="text/css" media="print" >
+    <link rel="stylesheet" href="/site_media/style.css" type="text/css" >
+    <link rel="stylesheet" href="/site_media/bubbles.css" type="text/css" >
 
 
-    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}"
-            type="text/javascript"></script>
 
-    <title>{% block title %}My amazing site{% endblock %}</title>
+    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}" type="text/javascript" > </script>
+
+    <title>{{event.name}}</title>
 </head>
-
+  
 <body>
 
-<div id="invite_popup" class="simple_overlay">
+  <div id="invite_popup" class="simple_overlay">
 
-  <h2>Invite Your Friends!</h2><BR><BR>
-  <div class="twitterfriends">
-    <h3>Twitter Friends</h3>
-    <div id="twitlist"></div>
-  </div><BR><BR><BR><BR><BR><BR>
-<input type="submit" class="button" value="Invite my friends">
-</div>
+    <h2>Invite Your Friends!</h2>
+    <BR /><BR />
+    <div class="twitterfriends">
+      <h3>Twitter Friends</h3>
+      <div id="twitlist"></div>
+    </div>
+    
+    <BR /><BR /><BR /><BR /><BR /><BR />
+    <input type="submit" class="button" value="Invite my friends" />
+  </div>
 
 
   <div class="container">
 
     <div class="span-19">&nbsp;</div>
+
     {% block login%}
     <div class="span-3 logout"><a href="/logout/">logout</a></div>
     {% endblock %}
+
     <div class="span-1 last" ></div>
     <hr />
 
-    <div class="span-24 last header"><BR><br>
-      <h1><font size=9em color=#ff8a00>{% block company %}Social Bite{% endblock %}</font></h1><BR><BR>
+    <div class="span-24 last header">
+      <BR /><br />
+	  <a href="/event_home/{{event.id}}"> <img height="200" src="/site_media/images/logo.png" /></a>
+	  <BR /><BR />
     </div>
 
 
@@ -52,73 +59,68 @@
     	
 
 
-   {% block header_notice %}
-   <div class="header notice">
-     <h1>hello patrickc!</h1>
-     <div class="quiet"><font size = 4.5em>you and your friends are 19 points away from a prize</font></div><BR>
-       <input type="submit" class="button" value="Count me In!"> &nbsp; &nbsp;
-	 <input type="submit" class="button2" value="Interested">
-	 </div>
-   {% endblock %}
+      {% block header_notice %}
+      {% endblock %}
 
 
-	 <BR>
+      <BR />
 		
-    	   <div class="yourprice">
-	     {% if going %}
-	     You Paid:
-	     {% else %}
-	     Your Price: 
-	     {% endif %}
+      <div class="yourprice">
+	{% if going %}
+	You Paid:
+	{% else %}
+	Your Price: 
+	{% endif %}
 
-	     <font color=#9cb926>${{event.discount_price}}</font></div>
-	   <div class="genprice">General Price: <font color=#ff8a00>${{event.price}}</font></div>
-	   <BR><BR><BR>
-		 <div class="attending">Attendees <font class="quiet">(<b>{{event.spots_left}}</b> Spots Left out of <b>{{event.capacity}}</b>!)</font></div>
+	<font color=#9cb926>${{event.discount_price}}</font></div>
+      <div class="genprice">General Price: <font color=#ff8a00>${{event.price}}</font></div>
+	
+      <BR /><BR /><BR />
+	
+      <div class="attending">Attendees <font class="quiet">(<b>{{event.spots_left}}</b> Spots Left out of <b>{{event.capacity}}</b>!)</font></div>
 		    
-		 {% block attendees %}
-		    <div class="attenddees"><img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"> <img src="/site_media/images/pf.png"></div>
-		{% endblock %}
-					      </div>
+      {% block attendees %}
+      {% endblock %}
+    </div>
 		
-	        <div class="span-1">&nbsp;</div>		  
-		<div class="span-11 last">
-      
-						<div id="visual_img" style="width: 400px; height: 500px;">
-						  <img class="center" src="/site_media/images/muse.png" />
+    <div class="span-1">&nbsp;</div>		  
+    <div class="span-11 last">
+	      
+      <div id="visual_img" style="width: 400px; height: 500px;">
+	<img class="center" src="/site_media/images/muse.png" />
 						</div>
-						<div id="visual_map" style="width: 400px; height: 500px;"></div>						
+      <div id="visual_map" style="width: 400px; height: 500px;"></div>						
+	      
+
+      <div id="title">
+	{{event.name}}
+      </div>
+      <div id="details">
+	{{event.venue}}, {{event.venue_address}}
+		
+
+	<a id="show_map" href="#"></a>
+	<br />{{event.time}} 
+      </div>
+    </div>
 
 
-		    <div id="title">
-		      {% block event_title %} Boston Muse Concert {% endblock%}
-		    </div>
-		    <div id="details">
-		      {% block event_venue %}Marriot Hotel{% endblock %}, {{event.venue_address}}
-		      
-
-		      <a id="show_map" href="#"></a>
-		      <br />{{event.time}} 
-		    </div>
-		 </div>
-
-
-		<!-- Footer content --> 		
-	    {% block footer %}
-	    <ul> 
-            <li><a href="/">Home</a></li> 
-            <li><a href="/about">About</a></li> 
-            <li><a href="http://twitter.com/datamarketplace">Twitter</a></li> 
-            <li><a href="/feedbacks/new" class="feedbackLink">Contact</a></li> 
-            <li><a href="/privacy">Legal</a></li> 
-            </ul>
-    	    @Copyright SocialBite 2010.
-	    {% endblock %}
+    <!-- Footer content --> 		
+    {% block footer %}
+    <ul> 
+      <li><a href="/">Home</a></li> 
+      <li><a href="/about">About</a></li> 
+      <li><a href="http://twitter.com/datamarketplace">Twitter</a></li> 
+      <li><a href="/feedbacks/new" class="feedbackLink">Contact</a></li> 
+      <li><a href="/privacy">Legal</a></li> 
+    </ul>
+    @Copyright SocialBite 2010.
+    {% endblock %}
  
 
-
-	  </div>
-	</div>
+  </div>
+</div>
 							
-      </body>
+</body>
 </html>
+    
