--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -18,108 +18,32 @@
 
     <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}" type="text/javascript" > </script>
 
-    <title>{{event.name}}</title>
+    <title>{% block title %} {% endblock %}</title>
 </head>
   
 <body>
 
-  <div id="invite_popup" class="simple_overlay">
-
-    <h2>Invite Your Friends!</h2>
-    <BR /><BR />
-    <div class="twitterfriends">
-      <h3>Twitter Friends</h3>
-      <div id="twitlist"></div>
-    </div>
-    
-    <BR /><BR /><BR /><BR /><BR /><BR />
-    <input type="submit" class="button" value="Invite my friends" />
-  </div>
-
-
   <div class="container">
+    
+    <!-- Header Content -->
+    {% include "header.html" %}    
 
-    <div class="span-19">&nbsp;</div>
 
-    {% block login%}
-    <div class="span-3 logout"><a href="/logout/">logout</a></div>
+    {% block content %}
+    
     {% endblock %}
 
-    <div class="span-1 last" ></div>
-    <hr />
-
-    <div class="span-24 last header">
-      <BR /><br />
-	  <a href="/event_home/{{event.id}}"> <img height="200" src="/site_media/images/logo.png" /></a>
-	  <BR /><BR />
-    </div>
 
 
-    <div class="span-12">
-    	
 
-
-      {% block header_notice %}
-      {% endblock %}
-
-
-      <BR />
-		
-      <div class="yourprice">
-	{% if going %}
-	You Paid:
-	{% else %}
-	Your Price: 
-	{% endif %}
-
-	<font color=#9cb926>${{event.discount_price}}</font></div>
-      <div class="genprice">General Price: <font color=#ff8a00>${{event.price}}</font></div>
-	
-      <BR /><BR /><BR />
-	
-      <div class="attending">Attendees <font class="quiet">(<b>{{event.spots_left}}</b> Spots Left out of <b>{{event.capacity}}</b>!)</font></div>
-		    
-      {% block attendees %}
-      {% endblock %}
-    </div>
-		
-    <div class="span-1">&nbsp;</div>		  
-    <div class="span-11 last">
-	      
-      <div id="visual_img" style="width: 400px; height: 500px;">
-	<img class="center" src="/site_media/images/muse.png" />
-						</div>
-      <div id="visual_map" style="width: 400px; height: 500px;"></div>						
-	      
-
-      <div id="title">
-	{{event.name}}
-      </div>
-      <div id="details">
-	{{event.venue}}, {{event.venue_address}}
-		
-
-	<a id="show_map" href="#"></a>
-	<br />{{event.time}} 
-      </div>
-    </div>
-
-
-    <!-- Footer content --> 		
-    {% block footer %}
-    <ul> 
-      <li><a href="/">Home</a></li> 
-      <li><a href="/about">About</a></li> 
-      <li><a href="http://twitter.com/datamarketplace">Twitter</a></li> 
-      <li><a href="/feedbacks/new" class="feedbackLink">Contact</a></li> 
-      <li><a href="/privacy">Legal</a></li> 
-    </ul>
-    @Copyright SocialBite 2010.
-    {% endblock %}
- 
+  <br />
+  <hr />
+  <div class="span-24 last footer">
+      <!-- Footer content -->
+      {% include "footer.html" %}
+  </div>
 
   </div>
-</div>
 							
 </body>
 </html>
