Changing to consistent look and feel between create pages and event pages.

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "event_base.html" %}
 
 {% block title %}Create{% endblock %}
 
 {% block content %}
-<p>Create Event.</p>
+<h1>Create Event.</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
