Getting datepicker to work with create page and gettign jquery ui library to work.

--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -9,6 +9,13 @@
     <script type="text/javascript" src="/site_media/myjscript.js" ></script>
     <script type="text/javascript" src="/site_media/jquery.tools.min.js" ></script>
 
+
+
+
+	{% block  js_css_include %}
+	{% endblock %}
+
+
     <link rel="stylesheet" href="/site_media/blueprint/screen.css" type="text/css" media="screen, projection" >
     <link rel="stylesheet" href="/site_media/blueprint/print.css" type="text/css" media="print" >
     <link rel="stylesheet" href="/site_media/style.css" type="text/css" >
