--- a/templates/create.html
+++ b/templates/create.html
@@ -1,41 +1,86 @@
 {% extends "event_base.html" %}
 
+{% block  js_css_include %}
+	<script type="text/javascript" src="/site_media/jquery.ptTimeSelect.js" ></script>
+	<script type="text/javascript" src="/site_media/jquery.calendar.js" ></script>
+	<script type="text/javascript" src="/site_media/jquery.dynDateTime.js" ></script>
+	<script type="text/javascript" src="/site_media/dimensions.js" ></script>	
+	<script type="text/javascript" src="/site_media/jquery-ui-1.8.1.custom.js"> 
+ </script>
+<script type="text/javascript" src="/site_media/jquery.ui.datepicker.js"> </script>
+
+	<link rel="stylesheet" href="/site_media/calendar-system.css" type="text/css" >
+	<link rel="stylesheet" href="/site_media/calendar-en.css" type="text/css" >
+	<link rel="stylesheet" href="/site_media/jquery.calendar.css" type="text/css" >
+<link rel="stylesheet" href="/site_media/jquery.ptTimeSelect.css" type="text/css" >	
+<link type="text/css" href="/site_media/jquery-ui-1.8.1.custom.css" rel="Stylesheet" />	
+
+{% endblock %} 
+
+
 {% block title %}Create{% endblock %}
 
 {% block content %}
-<h1>Create Event.</h1>
+<h1>Create Event</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 <form action="/create/" method="post">
   <ul>
-    <li><label for="event_name">Event Name:</label> <input type="text" name="event_name" /></li>
+    <li>
+		<label for="event_name">Event Name:</label> 
+		<input type="text" name="event_name" id="event_name" />
+	</li>
+	
     <li>
       <label for="event_date_start">Event Start Date:</label> 
       <input type="text" name="event_date_start" id="event_date_start" />
-      <img src="/site_media/images/calendar.png" id="date_start_trigger" style="vertical-align: middle; cursor: pointer;" />
-
+      
       <label for="event_time_start">Time:</label> 
       <input type="text" name="event_time_start" id="event_time_start" />
     </li>
+
     <li>
       <label for="event_date_end">Event End Date:</label> 
       <input type="text" name="event_date_end" id="event_date_end"/>
-       <img src="/site_media/images/calendar.png" id="date_end_trigger" style="vertical-align: middle; cursor: pointer;" />     
-
+          
       <label for="event_time_end">Time:</label> <input type="text" name="event_time_end" id="event_time_end" />
     </li>
-    <li><label for="event_capacity">Event Capacity:</label> <input type="text" name="event_capacity" /></li>
-    <li><label for="event_venue">Event Venue:</label> <input type="text" name="event_venue" /></li>
-    <li><label for="event_address">Venue Address:</label> <input type="text" name="event_address" /></li>
-    <li><label for="event_description">Event Description:</label> <input type="textarea" name="event_description" /></li>
-    <li><label for="event_price">Event Price:</label> <input type="text" name="event_price" /></li>
-    <li><label for="event_url">Event URL:</label> <input type="text" name="event_url" /></li>
+
+    <li>
+		<label for="event_capacity">Event Capacity:</label> <input type="text" name="event_capacity" />
+	</li>
+	
+    <li>
+		<label for="event_venue">Event Venue:</label> <input type="text" name="event_venue" />
+	</li>
+	
+    <li>
+		<label for="event_address">Venue Address:</label> <input type="text" name="event_address" />
+	</li>
+	
+    <li>
+		<label for="event_description">Event Description:</label> <input type="textarea" name="event_description" />
+	</li>
+	
+    <li>
+		<label for="event_price">Event Price:</label> <input type="text" name="event_price" />
+	</li>
+	
+    <li>
+		<label for="event_url">Event URL:</label> <input type="text" name="event_url" />
+	</li>
     
 
-    <br />Organizer Info:<br />
-    <li><label for="person_email">Organizer Contact Email:</label> <input type="text" name="person_email" /></li>
+    <br /><br />
+	<h3>Organizer Info:</h3>
+    
+	<li>
+		<label for="person_email">Organizer Contact Email:</label> <input type="text" name="person_email" />
+	</li>
+
   </ul>
+
   <br />
 <input type="submit" value="Create Event" />
 </form>
@@ -43,11 +88,22 @@
 
 
 <script>
+
+
 $(document).ready(function() {
-  $('#event_time_start').ptTimeSelect({ popupImage: 'Select Time' });
-  $('#event_time_end').ptTimeSelect({ popupImage: 'Select Time'} );
-  $('#event_date_end').calendar({triggerElement: '#date_end_trigger'});
-  $('#event_date_start').calendar({triggerElement: '#date_start_trigger'});
+		$('#event_name').focus();
+		$('#event_time_start').ptTimeSelect({ popupImage: 'Select Time' });
+		$('#event_time_end').ptTimeSelect({ popupImage: 'Select Time' });
+		//$('#event_date_end').calendar({triggerElement: '#date_end_trigger'});
+		//$('#event_date_start').calendar({triggerElement: '#date_start_trigger'}); 
+				                			
+		$('#event_date_start').datepicker({ buttonImageOnly: false,
+			 					buttonImage: '/site_media/images/calendar.png',
+								showOn: 'button'});
+		$('#event_date_end').datepicker({ buttonImageOnly: false,
+							    buttonImage: '/site_media/images/calendar.png',
+								showOn: 'button'});
 });
 </script>
+
 {% endblock %}
