--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -1,6 +1,14 @@
 {% extends "event_base.html" %}
 
 
+
+	{% block  js_css_include %}
+    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}" type="text/javascript" > </script>
+	{% endblock %}
+
+
+
+
 {% block title  %}
 {{event.name}}
 {% endblock %}
