--- a/templates/create.html
+++ b/templates/create.html
@@ -1,19 +1,16 @@
 {% extends "event_base.html" %}
 
 {% block  js_css_include %}
-	<script type="text/javascript" src="/site_media/jquery.ptTimeSelect.js" ></script>
-	<script type="text/javascript" src="/site_media/jquery.calendar.js" ></script>
-	<script type="text/javascript" src="/site_media/jquery.dynDateTime.js" ></script>
-	<script type="text/javascript" src="/site_media/dimensions.js" ></script>	
 	<script type="text/javascript" src="/site_media/jquery-ui-1.8.1.custom.js"> 
  </script>
 <script type="text/javascript" src="/site_media/jquery.ui.datepicker.js"> </script>
+<script type="text/javascript" src="/site_media/jquery.timePicker.js"> </script>
 
 	<link rel="stylesheet" href="/site_media/calendar-system.css" type="text/css" >
 	<link rel="stylesheet" href="/site_media/calendar-en.css" type="text/css" >
 	<link rel="stylesheet" href="/site_media/jquery.calendar.css" type="text/css" >
 <link rel="stylesheet" href="/site_media/jquery.ptTimeSelect.css" type="text/css" >	
-<link type="text/css" href="/site_media/jquery-ui-1.8.1.custom.css" rel="Stylesheet" />	
+<link type="text/css" href="/site_media/jquery-ui-1.8.1.custom.css" rel="Stylesheet" />
 
 {% endblock %} 
 
@@ -56,11 +53,13 @@
 	</li>
 	
     <li>
-		<label for="event_address">Venue Address:</label> <input type="text" name="event_address" />
+		<label for="event_address">Venue Address:</label> 
+		<textarea rows="2" cols="30" name="event_address" ></textarea>
 	</li>
 	
     <li>
-		<label for="event_description">Event Description:</label> <input type="textarea" name="event_description" />
+		<label for="event_description">Event Description:</label> 
+		<textarea rows="6" cols="40" name="event_description"> </textarea>
 	</li>
 	
     <li>
@@ -91,18 +90,21 @@
 
 
 $(document).ready(function() {
-		$('#event_name').focus();
-		$('#event_time_start').ptTimeSelect({ popupImage: 'Select Time' });
-		$('#event_time_end').ptTimeSelect({ popupImage: 'Select Time' });
-		//$('#event_date_end').calendar({triggerElement: '#date_end_trigger'});
-		//$('#event_date_start').calendar({triggerElement: '#date_start_trigger'}); 
-				                			
+		$('#event_name').focus();	                			
 		$('#event_date_start').datepicker({ buttonImageOnly: false,
 			 					buttonImage: '/site_media/images/calendar.png',
 								showOn: 'button'});
 		$('#event_date_end').datepicker({ buttonImageOnly: false,
 							    buttonImage: '/site_media/images/calendar.png',
 								showOn: 'button'});
+		$("#event_time_start").timePicker({
+				show24Hours: false,
+				separator: '.',
+	    		step: 15});
+		$("#event_time_end").timePicker({
+				show24Hours: false,
+				separator: '.',
+	    		step: 15});
 });
 </script>
 
