Making dates work on the server side. Fixing some ui bugs. Event creation working.

--- a/templates/create.html
+++ b/templates/create.html
@@ -99,11 +99,11 @@ $(document).ready(function() {
 								showOn: 'button'});
 		$("#event_time_start").timePicker({
 				show24Hours: false,
-				separator: '.',
+				separator: ':',
 	    		step: 15});
 		$("#event_time_end").timePicker({
 				show24Hours: false,
-				separator: '.',
+				separator: ':',
 	    		step: 15});
 });
 </script>
