--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -6,7 +6,7 @@
 <p>Event Created, Thanks..</p>
 
 {% if event %}
-<a href=/details/{{event.id}}>{{ event.name }}</a> <br />
+<a href=/event_home/{{event.id}}>{{ event.name }}</a> <br />
 Event Id: {{ event.id }} <br />
 Description: {{event.description}} <br />
 Start Time: {{event.event_date_time_start}} <br />
