Email to show up in create

--- a/templates/create.html
+++ b/templates/create.html
@@ -75,7 +75,7 @@
 	<h3>Organizer Info:</h3>
     
 	<li>
-		<label for="person_email">Organizer Contact Email:</label> <input type="text" name="person_email" />
+		<label for="person_email">Organizer Contact Email:</label> <input type="text" name="person_email" value="{{user.email}}" />
 	</li>
 
   </ul>
