Fixing some bugs.

--- a/templates/create.html
+++ b/templates/create.html
@@ -144,7 +144,7 @@ function ajaxFileUpload(file_name)
                         },
                         error: function (data, status, e)
                         {
-                                alert("error2 " + e);
+                                alert("error2 " + e + data + status);
                         }
                 }
         )
