Adding size requirements for image.

--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -104,7 +104,7 @@
 <div class="span-11 last">
 	      
   <div id="visual_img" style="width: 400px; height: 500px;">
-    <img class="center" src="/site_media/images/events/{{event.id}}" />
+    <img class="center" style="width: 400px; height: 500px;" src="/site_media/images/events/{{event.id}}" />
   </div>
 
   <div id="visual_map" style="width: 400px; height: 500px;" > </div>						
