--- a/templates/event_base.html
+++ b/templates/event_base.html
@@ -40,14 +40,15 @@
 
 
   <br />
-  <hr />
-  <div class="span-24 last footer">
-      <!-- Footer content -->
+  <br />
+  <br />
+<hr />
+  <div class="span-24 last myfooter">
+  
+    <!-- Footer content -->
       {% include "footer.html" %}
-  </div>
-
-  </div>
-							
+  
+</div>							
 </body>
 </html>
     
