--- a/templates/create.html
+++ b/templates/create.html
@@ -159,10 +159,10 @@ $(document).ready(function() {
 		$('#event_name').focus();	                			
 		$('#event_date_start').datepicker({ buttonImageOnly: false,
 			 					buttonImage: '/site_media/images/calendar.png',
-								showOn: 'button'});
+								showOn: 'both'});
 		$('#event_date_end').datepicker({ buttonImageOnly: false,
 							    buttonImage: '/site_media/images/calendar.png',
-								showOn: 'button'});
+								showOn: 'both'});
 		$("#event_time_start").timePicker({
 				show24Hours: false,
 				separator: ':',
