--- a/templates/create.html
+++ b/templates/create.html
@@ -159,7 +159,13 @@ $(document).ready(function() {
 		$('#event_name').focus();	                			
 		$('#event_date_start').datepicker({ buttonImageOnly: false,
 			 					buttonImage: '/site_media/images/calendar.png',
-								showOn: 'both'});
+								showOn: 'both',
+								onSelect: 
+									function(dateText, inst) { 
+										if ($.trim($('#event_date_end').val()) == ""){
+											alert("notta"); 
+											$('#event_date_end').val(dateText);
+										}}});
 		$('#event_date_end').datepicker({ buttonImageOnly: false,
 							    buttonImage: '/site_media/images/calendar.png',
 								showOn: 'both'});
