--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -18,7 +18,7 @@
 <!-- Content starts here -->
 <div class="span-12">
 
-      {%if user%}
+{%if user%}
 
   {% if going %}
       <div class="header notice">
@@ -39,7 +39,7 @@
 	  
 	
 	<input id="going_button" type="submit" class="button" value="Count me In!"> &nbsp; &nbsp;
-	<input id="maybe_going_button" type="submit" class="button2" value="Interested" onClick="location.href='/ajax/maybe_going/{{event.id}}'">
+	<button href='#' id="invite_button" class="button2" rel="#invite_popup">Tell Friends</button>
       </div>
   {% endif%}
 {% else %}
@@ -131,10 +131,7 @@ $(document).ready(function() {
 	$('#invite_popup_close').bind('click', function() {
 		$('#invite_popup').hide();
 		$('#twitlist').html("");
-	    });
-
-
-
+	 });
 
 
 	$("#not_going_button").click(function(){
@@ -150,14 +147,17 @@ $(document).ready(function() {
 	    });
 
 
-
 	$("#invite_button").overlay(
 				    {
 					expose: {
 					    loadSpeed: 200,
 						color: 'gray',
 						opacity: 0.8
-						}
+						},
+					onLoad: function(event) {
+						alert("overlay loaded");
+						display_friends_invite();
+					}
 				    }); 
 			
 });
@@ -197,11 +197,16 @@ $(document).ready(function() {
 		    $("#show_map").html("(Show Map)");
 		}
 	    });
-			
-		    
-			
-
     });
+
+function display_friends_invite() {
+		alert("diaply");
+	    $.getJSON('/ajax/event_friend_not_attendees/{{event.id}}', function(data){
+			alert("Json Data " + data);
+		    $('#twitlist').append(make_friend_list(data));
+		});
+		alert("done");
+}
 </script>
 <!-- Content ends here -->
 {% endblock %}
