--- a/templates/event_home.html
+++ b/templates/event_home.html
@@ -55,14 +55,15 @@
 
 <div id="invite_popup" class="simple_overlay">
 
-    <h2>Invite Your Friends!</h2>
-    <BR /><BR />
+    <h1>Invite Your Friends!</h1>
+    <BR />
     <div class="twitterfriends">
-      <h3>Twitter Friends</h3>
-      <div id="twitlist"></div>
+      <div><h3>Twitter Friends&nbsp;&nbsp;&nbsp;<button id="tweet_invite_button">Tweet Invite</button></h3> </div>
+      <div id="tweet_msg"></div>
+      <div id="twitlist"><img src="/site_media/images/ajax_loader.gif" /></div>
     </div>
     
-    <BR /><BR /><BR /><BR /><BR /><BR />
+    <BR />
     <input type="submit" class="button" value="Invite my friends" />
 </div>
 
@@ -130,7 +131,7 @@ $(document).ready(function() {
 
 	$('#invite_popup_close').bind('click', function() {
 		$('#invite_popup').hide();
-		$('#twitlist').html("");
+		$('#twitlist').html("<img width='30' height='30' src='/site_media/images/ajax_loader.gif' />");
 	 });
 
 
@@ -146,6 +147,19 @@ $(document).ready(function() {
 		    });
 	    });
 
+       $("#tweet_invite_button").click(function(){
+		$.ajax({
+                    url: '/ajax/event_tweet_invite/{{event.id}}', 
+                    dataType: "json",
+                    success: function(data){
+                        $("#tweet_msg").html(data["msg"]);  
+	        	     },
+                    beforeSend: function() {
+                        $("#tweet_invite_button").attr("disabled","disabled");                               
+                        $("#tweet_msg").html("<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />Sending Tweet<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />");
+                    }
+                   });
+	    });
 
 	$("#invite_button").overlay(
 				    {
@@ -155,13 +169,12 @@ $(document).ready(function() {
 						opacity: 0.8
 						},
 					onLoad: function(event) {
+                                                $("#tweet_msg").html(""); 
+                                                $("#tweet_invite_button").removeAttr("disabled");
 						display_friends_invite();
 					}
 				    }); 
 			
-});
-
-$(document).ready(function() {
     
 	$("#visual_map").hide();
 	$("#show_map").html("(Show Map)");
@@ -199,9 +212,18 @@ $(document).ready(function() {
     });
 
 function display_friends_invite() {
-	    $.getJSON('/ajax/event_friend_not_attendees/{{event.id}}', function(data){
-		    $('#twitlist').append(make_friend_list(data));
-		});
+            $.ajax({
+                    url: '/ajax/event_friend_not_attendees/{{event.id}}', 
+                    dataType: "json",
+                    success: function(data){
+                               $('#twitlist').html(make_friend_list(data));
+                               $('#tweet_msg').html("Invite your friends.");
+	        	     },
+                    beforeSend: function() {
+                        $('#tweet_msg').html("<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />Loading Friend Data<img width='20' height='20' src='/site_media/images/ajax-loader.gif' />");
+                    }
+                   });
+ 
 }
 </script>
 <!-- Content ends here -->
